# Magik-The-Separation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
public/: index.html  index.js
src/: CMakeLists.txt
src/backend/: App.cpp  CMakeLists.txt
src/backend/components/ability/: Ability.cpp  Ability.h  ActivatedAbility.cpp  ActivatedAbility.h  StaticAbility.cpp  StaticAbility.h  TriggeredAbility.cpp  TriggeredAbility.h
src/backend/components/card/: Artifact.cpp  Artifact.h  Card.cpp  Card.h  CardMaker.cpp  CardMaker.h  Creature.cpp  Creature.h  Enchantement.cpp  Enchantement.h  Instant.cpp  Instant.h  Land.cpp  Land.h  Sorcery.cpp  Sorcery.h
src/backend/components/deck/: Battlefield.cpp  Battlefield.h  Deck.cpp  Deck.h  Exile.cpp  Exile.h  Graveyard.cpp  Graveyard.h  Hand.cpp  Hand.h  Library.cpp  Library.h  Stack.cpp  Stack.h
src/backend/components/player/: Player.cpp  Player.h
src/backend/components/type/: Artifact.h  Color.h  Creature.h  Enchantement.h  Instant.cpp  Instant.h  Land.h  Sorcery.cpp  Sorcery.h  Type.cpp  Type.h
src/backend/game/: Game.cpp  Game.h  GameAction.cpp  GameAction.h
src/backend/server/: Server.cpp  Server.h  WebSocketServer.cpp  WebSocketServer.h
src/card_list/: AllCards.json  AllCardsName.txt  CardImages.json
src/public/: Gruntfile.js  bower.json  index.html  index.js  package.json
src/public/api/controllers/: DebugController.js  LoginController.js
src/public/api/libraries/: Card.js  Deck.js  Set.js
src/public/api/models/: User.js
src/public/api/policies/: views_globals.js
src/public/assets/js/: sails.io.js
src/public/assets/js/src/: magik.js
src/public/assets/js/src/deck-builder/: controller.js
src/public/assets/js/src/driver/: gatherer.js  magiccards.info.js  mtgimage.js  template.js
src/public/assets/js/src/generic/: realtime.js
src/public/assets/js/src/playground/: playground.controller.js  playground.js
src/public/assets/js/src/plugins/: card_viewer.js  context_menu.js
src/public/assets/js/src/simple/: lobby.js
src/public/assets/styles/: cards.less  constants.less  counters.less  layout.less  magik.less  mixins.less
src/public/config/: connections.js  magik.js  models.js  sock.js  sockets.js
src/public/database/: magik.db  parsedCards.json
src/public/scripts/: cards.js  sets.js
src/public/tasks/config/: less.js
src/public/views/: layout.jade
src/public/views/lobby/: lobby.jade
src/public/views/login/: login.jade
src/public/views/playground/: playground.jade
